// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build fs output: 00 manifest.json 1`] = `
Object {
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "description": "test extension",
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "https://github.com/*",
        "https://google.com/*",
      ],
      "resources": Array [
        "assets/content1.ts.hash.js",
        "assets/content2.ts.hash.js",
        "assets/font.hash.otf",
        "assets/image.hash.png",
        "assets/script.ts.hash.js",
      ],
      "use_dynamic_url": true,
    },
  ],
}
`;

exports[`build fs output: 01 output files 1`] = `
Array [
  "assets/background.ts.hash.js",
  "assets/content-script-loader.content1.ts.hash.hash.js",
  "assets/content-script-loader.content2.ts.hash.hash.js",
  "assets/content-script-loader.script.ts.hash.hash.js",
  "assets/content1.ts.hash.js",
  "assets/content2.ts.hash.js",
  "assets/font.hash.otf",
  "assets/image.hash.png",
  "assets/script.ts.hash.js",
  "manifest.json",
  "service-worker-loader.js",
]
`;

exports[`build fs output: assets/background.ts.hash.js 1`] = `
"var content1 = \\"/assets/content-script-loader.content1.ts.hash.hash.js\\";

var content2 = \\"/assets/content-script-loader.content2.ts.hash.hash.js\\";

chrome.scripting.executeScript({
  files: [content1, content2],
  target: { tabId: 1 }
});
"
`;

exports[`build fs output: assets/content-script-loader.content1.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content1.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output: assets/content-script-loader.content2.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/content2.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output: assets/content-script-loader.script.ts.hash.hash.js 1`] = `
"(function () {
  'use strict';

  (async () => {
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL(\\"assets/script.ts.hash.js\\")
    );
  })().catch(console.error);

})();
"
`;

exports[`build fs output: assets/content1.ts.hash.js 1`] = `
"var icon = \\"/assets/image.hash.png\\";

var script = \\"/assets/content-script-loader.script.ts.hash.hash.js\\";

console.log(\\"content.ts\\", { icon, script });
"
`;

exports[`build fs output: assets/content2.ts.hash.js 1`] = `
"var font = \\"/assets/font.hash.otf\\";

console.log(\\"content2.ts\\", { font });
"
`;

exports[`build fs output: assets/script.ts.hash.js 1`] = `
"console.log(\\"main world script\\");
"
`;

exports[`build fs output: service-worker-loader.js 1`] = `
"import './assets/background.ts.hash.js';
"
`;
